# bb-dash

./: .env.template  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml
bitbucket-client/: .openapi-generator-ignore  Cargo.toml  README.md
bitbucket-client/.openapi-generator/: FILES
bitbucket-client/docs/: Account.md  AccountLinks.md  AddonApi.md  ApiAccount.md  ApiAccountLinks.md  ApiAppUser.md  ApiApplicationProperty.md  ApiAuthor.md  ApiBaseCommit.md  ApiBitbucketAppsPermissionsSerializersProjectPermissionUpdateSchema.md  ApiBitbucketAppsPermissionsSerializersRepoPermissionUpdateSchema.md  ApiBranch.md  ApiBranchingModel.md  ApiBranchingModelSettings.md  ApiBranchrestriction.md  ApiComment.md  ApiCommentResolution.md  ApiCommit.md  ApiCommitComment.md  ApiCommitFile.md  ApiCommitstatus.md  ApiCommitter.md  ApiComponent.md  ApiDefaultReviewerAndType.md  ApiDeployKey.md  ApiDeployment.md  ApiDeploymentEnvironment.md  ApiDeploymentRelease.md  ApiDeploymentState.md  ApiDeploymentStateCompleted.md  ApiDeploymentStateCompletedStatus.md  ApiDeploymentStateCompletedStatusFailed.md  ApiDeploymentStateCompletedStatusStopped.md  ApiDeploymentStateCompletedStatusSuccessful.md  ApiDeploymentStateInProgress.md  ApiDeploymentStateUndeployed.md  ApiDeploymentVariable.md  ApiDiffstat.md  ApiEffectiveRepoBranchingModel.md  ApiError.md  (+398 more)
bitbucket-client/src/: lib.rs
bitbucket-client/src/apis/: addon_api.rs  branch_restrictions_api.rs  branching_model_api.rs  commit_statuses_api.rs  commits_api.rs  configuration.rs  deployments_api.rs  downloads_api.rs  gpg_api.rs  issue_tracker_api.rs  mod.rs  pipelines_api.rs  projects_api.rs  properties_api.rs  pullrequests_api.rs  refs_api.rs  reports_api.rs  repositories_api.rs  search_api.rs  snippets_api.rs  source_api.rs  ssh_api.rs  users_api.rs  webhooks_api.rs  workspaces_api.rs
bitbucket-client/src/models/: account.rs  account_links.rs  api_account.rs  api_account_links.rs  api_app_user.rs  api_application_property.rs  api_author.rs  api_base_commit.rs  api_bitbucket_apps_permissions_serializers_project_permission_update_schema.rs  api_branch.rs  api_branching_model.rs  api_branchrestriction.rs  (+404 more)
(+21 files in other folders)
