[package]
name = "bb-dash"
version = "0.1.0"
description = "Bitbucket TUI client"
authors = ["rznn7 <160644362+rznn7@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0"

dotenv = "0.15"

strum = { version = "0.27", features = ["derive"] }

crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.29"

tokio = { version = "1", features = ["full"]}
futures = "0.3"

reqwest = { version = "0.12", features = ["json"]}
serde = "1.0"
