[package]
name = "bb-dash"
version = "0.1.0"
description = "Bitbucket TUI client"
authors = ["rznn7 <160644362+rznn7@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
anyhow = "1.0"
bitbucket-client = { path = "./bitbucket-client" }
crossterm = { version = "0.29", features = ["event-stream"] }
directories = "6.0.0"
dotenv = "0.15"
futures = "0.3"
lazy_static = "1.5.0"
ratatui = "0.30"
regex = "1.12"
serde = "1.0"
serde_json = "^1.0"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
